--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.14",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
