--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-mousetrap": "^2.0.4",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
@@ -18,6 +19,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-hook-mousetrap": "^2.0.0",
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.14",
     "react-scripts": "4.0.3",
