--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
